Fixing CSS and Adding Scrollbar Styling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,6 +153,19 @@ table {
   border-spacing: 0;
 }
 
+::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.3rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #424a63;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #fde7b6;
+}
+
 .epw-logo {
   position: absolute;
   top: 2rem;
